Fixed images and stated input boxes

--- a/index.html
+++ b/index.html
@@ -58,12 +58,36 @@
           </div>
         </div>
       </div>
-      <section class="about_us">
-        <div class="container_double">
-          <div class="box box1"></div>
-          <div class="box box2"></div>
+    </section>
+    <section class="about_us">
+      <div class="container_double">
+        <div class="box about_box1">
+          <div class="about_content">
+            <h1>About the Tool</h1>
+            <p>This is lots of text which will tell the user about the tool and how to use it
+            </p>
+          </div>
         </div>
-      </section>
+        <div class="box about_box2">
+          <img src="../Relay_website/images/starting-block.jpg" alt="Image of Starting Block">
+        </div>
+        </div>
+    </section>
+    <section class="Input">
+      <div class="container_double">
+        <div class="box input_box1">
+          <img src="../Relay_website/images/Underwater_photo.jpg" alt="Image of swimmer performing underwater kick">
+        </div>
+        <div class="box input_box2">
+          <h1>Build your Relay</h1>
+          <h2>Insert the ASA numbers for each swimmer into the boxes below</h2>
+          <form>
+            Swimmer 1 <input type="text" name = "Swimmer 1">
+            Swimmer 2 <input type="text" name = "Swimmer 2"
+          </form>
+
+        </div>
+      </div>
     </section>
     <script>
       src = "js/main.js";
