Some fixes to hero

--- a/index.html
+++ b/index.html
@@ -50,14 +50,16 @@
     <!--Hero-->
     <section class="hero">
       <div class="container">
-        <div class="hero-content">
-          <h1 class="hero-heading text-xxl">Lots of text here</h1>
-          <p>More text about the tool</p>
-          <div class="hero-button">
-            <a href="#" class="btn">Go</a>
-          </div>
+        <img src="../Relay_website/images/relay-takeover-new.jpg" alt="Image of a relay takeover">
+      </div>
+      <div class="hero-content">
+        <h1 class="hero-heading text-xxl">Lots of text here</h1>
+        <p>More text about the tool</p>
+        <div class="hero-button">    
+          <a href="#" class="btn">Go</a>
         </div>
       </div>
+      
     </section>
     <section class="about_us">
       <div class="container_double">
