Fixed alignment and started on form

--- a/index.html
+++ b/index.html
@@ -63,12 +63,10 @@
     </section>
     <section class="about_us">
       <div class="container_double">
-        <div class="box about_box1">
-          <div class="about_content">
+        <div class="box about_text">
             <h1>About the Tool</h1>
             <p>This is lots of text which will tell the user about the tool and how to use it
             </p>
-          </div>
         </div>
         <div class="box about_box2">
           <img src="../Relay_website/images/starting-block.jpg" alt="Image of Starting Block">
@@ -84,8 +82,14 @@
           <h1>Build your Relay</h1>
           <h2>Insert the ASA numbers for each swimmer into the boxes below</h2>
           <form>
-            Swimmer 1 <input type="text" name = "Swimmer 1">
-            Swimmer 2 <input type="text" name = "Swimmer 2"
+            <label for="Swimmer1">Swimmer 1</label>
+            <input type="text" name = "Swimmer1"><br>
+            <label for="Swimmer2">Swimmer 2</label>
+            <input type="text" name = "Swimmer2"><br>
+            <label for="Swimmer3">Swimmer 3</label>
+            <input type="text" name = "Swimmer3"><br>
+            <label for="Swimmer4">Swimmer 4</label>
+            <input type="text" name = "Swimmer4"><br>
           </form>
 
         </div>
