Added table and linked to input form

--- a/index.html
+++ b/index.html
@@ -150,23 +150,9 @@
         </div>
       </div>
     </section>
-    <section class="results">
+    <section id="results">
       <div class="table-container">
-        <table class="results-table">
-          <tr>
-            <th>1st</th>
-            <th>2nd</th>
-            <th>3rd</th>
-            <th>4th</th>
-          </tr>
-          <tr>
-            <td>John</td>
-            <td>steve</td>
-            <td>bill</td>
-            <td>fred</td>
-          </tr>
-        </table>
-      </div>
+      
     </section>
     <script src="js/main.js"></script>
   </body>
