Added buttons to change from short to long course

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 inputmode="numeric"
                 name="Swimmer1"
                 id="Swimmer1"
+                value="1165975"
               />
             </div>
 
@@ -116,6 +117,7 @@
                 inputmode="numeric"
                 name="Swimmer2"
                 id="Swimmer2"
+                value="1165969"
               />
             </div>
 
@@ -127,6 +129,7 @@
                 inputmode="numeric"
                 name="Swimmer3"
                 id="Swimmer3"
+                value="1160036"
               />
             </div>
 
@@ -138,15 +141,21 @@
                 inputmode="numeric"
                 name="Swimmer4"
                 id="Swimmer4"
+                value="1585893"
               />
             </div>
-            <div class="buttons-container" id="buttons-container">
-              <button type="button" class="btn btn-grey" id="addSwimmerButton">
-                Add +
-              </button>
-              <button class="btn" type="submit">Submit</button>
+            <button type="button" class="btn btn-grey" id="addSwimmerButton">
+              Add +
+            </button>
+            <div class="radio-wrapper" id="pool-length">
+              <input type="radio" name="course-type" id="short-course" value="short">
+              <label for="short-course">Short Course</label>
+              <input type="radio" name="course-type" id="long-course" value="long">
+              <label for="long-course">Long Course</label>
             </div>
+            <button class="btn" type="submit">Submit</button>
           </form>
+          
         </div>
       </div>
     </section>
