Added some Swimcloud options and a loading wheel

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
       </div>
     </section>
     <section id="results">
+      <div id="spinner" class="spinner"></div>
       <div class="table-container">
       
     </section>
