Fixed all issues with swimmer input form

--- a/index.html
+++ b/index.html
@@ -106,61 +106,62 @@
               class="form-container"
               id="swimmer-form"
             > 
-              <div class="swimmer-input">
-                <label for="Swimmer1">Swimmer 1</label>
-                <div class="divider"></div>
-                <input
-                  type="text"
-                  inputmode="numeric"
-                  name="Swimmer1"
-                  id="Swimmer1"
-                  value="1165975"
-                />
-              </div>
+              <div class="swimmer-container" id="swimmer-container-ASA">
+                <div class="swimmer-input">
+                  <label for="Swimmer1">Swimmer 1</label>
+                  <div class="divider"></div>
+                  <input
+                    type="text"
+                    inputmode="numeric"
+                    name="Swimmer1"
+                    id="Swimmer1"
+                    value="1165975"
+                  />
+                </div>
 
-              <div class="swimmer-input">
-                <label for="Swimmer2">Swimmer 2</label>
-                <div class="divider"></div>
-                <input
-                  type="text"
-                  inputmode="numeric"
-                  name="Swimmer2"
-                  id="Swimmer2"
-                  value="1165969"
-                />
-              </div>
+                <div class="swimmer-input">
+                  <label for="Swimmer2">Swimmer 2</label>
+                  <div class="divider"></div>
+                  <input
+                    type="text"
+                    inputmode="numeric"
+                    name="Swimmer2"
+                    id="Swimmer2"
+                    value="1165969"
+                  />
+                </div>
 
-              <div class="swimmer-input">
-                <label for="Swimmer3">Swimmer 3</label>
-                <div class="divider"></div>
-                <input
-                  type="text"
-                  inputmode="numeric"
-                  name="Swimmer3"
-                  id="Swimmer3"
-                  value="1160036"
-                />
-              </div>
+                <div class="swimmer-input">
+                  <label for="Swimmer3">Swimmer 3</label>
+                  <div class="divider"></div>
+                  <input
+                    type="text"
+                    inputmode="numeric"
+                    name="Swimmer3"
+                    id="Swimmer3"
+                    value="1160036"
+                  />
+                </div>
 
-              <div class="swimmer-input">
-                <label for="Swimmer4">Swimmer 4</label>
-                <div class="divider"></div>
-                <input
-                  type="text"
-                  inputmode="numeric"
-                  name="Swimmer4"
-                  id="Swimmer4"
-                  value="1585893"
-                />
+                <div class="swimmer-input">
+                  <label for="Swimmer4">Swimmer 4</label>
+                  <div class="divider"></div>
+                  <input
+                    type="text"
+                    inputmode="numeric"
+                    name="Swimmer4"
+                    id="Swimmer4"
+                    value="1585893"
+                  />
+                </div>
               </div>
-              <div id="swimmer-container-ASA"></div>
               <button type="button" class="btn btn-grey addSwimmerButton" id="addSwimmerButton-asa" data-target-container="swimmer-container-ASA">
                 Add +
               </button>
               <div class="radio-wrapper" id="pool">
                 <input type="radio" name="course-type" class="short-course" id="short-course-asa" value="short">
                 <label class="radio-label" for="short-course-asa">Short Course</label>
-                <input type="radio" name="course-type" class="long-course" id="long-course" value="long">
+                <input type="radio" name="course-type" class="long-course" id="long-course-asa" value="long">
                 <label class="radio-label" for="long-course-asa">Long Course</label>
               </div>
               <div class="radio-wrapper" id="race-length">
@@ -180,54 +181,55 @@
               class="form-container"
               id="swimmer-form"
             >
-              <div class="swimmer-input">
-                <label for="Swimmer1">Swimmer 1</label>
-                <div class="divider"></div>
-                <input
-                  type="text"
-                  inputmode="numeric"
-                  name="Swimmer1"
-                  id="Swimmer1"
-                  value="2361642"
-                />
-              </div>
+              <div class="swimmer-container" id="swimmer-container-swimcloud">
+                <div class="swimmer-input">
+                  <label for="Swimmer1">Swimmer 1</label>
+                  <div class="divider"></div>
+                  <input
+                    type="text"
+                    inputmode="numeric"
+                    name="Swimmer1"
+                    id="Swimmer1"
+                    value="2361642"
+                  />
+                </div>
 
-              <div class="swimmer-input">
-                <label for="Swimmer2">Swimmer 2</label>
-                <div class="divider"></div>
-                <input
-                  type="text"
-                  inputmode="numeric"
-                  name="Swimmer2"
-                  id="Swimmer2"
-                  value="2361646"
-                />
-              </div>
+                <div class="swimmer-input">
+                  <label for="Swimmer2">Swimmer 2</label>
+                  <div class="divider"></div>
+                  <input
+                    type="text"
+                    inputmode="numeric"
+                    name="Swimmer2"
+                    id="Swimmer2"
+                    value="2361646"
+                  />
+                </div>
 
-              <div class="swimmer-input">
-                <label for="Swimmer3">Swimmer 3</label>
-                <div class="divider"></div>
-                <input
-                  type="text"
-                  inputmode="numeric"
-                  name="Swimmer3"
-                  id="Swimmer3"
-                  value="1283295"
-                />
-              </div>
+                <div class="swimmer-input">
+                  <label for="Swimmer3">Swimmer 3</label>
+                  <div class="divider"></div>
+                  <input
+                    type="text"
+                    inputmode="numeric"
+                    name="Swimmer3"
+                    id="Swimmer3"
+                    value="1283295"
+                  />
+                </div>
 
-              <div class="swimmer-input">
-                <label for="Swimmer4">Swimmer 4</label>
-                <div class="divider"></div>
-                <input
-                  type="text"
-                  inputmode="numeric"
-                  name="Swimmer4"
-                  id="Swimmer4"
-                  value="196011"
-                />
+                <div class="swimmer-input">
+                  <label for="Swimmer4">Swimmer 4</label>
+                  <div class="divider"></div>
+                  <input
+                    type="text"
+                    inputmode="numeric"
+                    name="Swimmer4"
+                    id="Swimmer4"
+                    value="196011"
+                  />
+                </div>
               </div>
-              <div id="swimmer-container-swimcloud"></div>
               <button type="button" class="btn btn-grey addSwimmerButton" id="addSwimmerButton-sc" data-target-container="swimmer-container-swimcloud">
                 Add +
               </button>
