Swim Cloud tab fully functioning

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               action="/submit"
               method="post"
               class="form-container"
-              id="swimmer-form"
+              id="swimmer-form-ASA"
             > 
               <div class="swimmer-container" id="swimmer-container-ASA">
                 <div class="swimmer-input">
@@ -179,7 +179,7 @@
               action="/submit"
               method="post"
               class="form-container"
-              id="swimmer-form"
+              id="swimmer-form-swimcloud"
             >
               <div class="swimmer-container" id="swimmer-container-swimcloud">
                 <div class="swimmer-input">
