--- a/index.html
+++ b/index.html
@@ -84,14 +84,8 @@
       </div>
     </section>
     <section class="Input" id="Input">
-      <div class="container_double">
-        <div class="box input_box1">
-          <img
-            src="../images/Underwater_photo.jpg"
-            alt="Image of swimmer performing underwater kick"
-          />
-        </div>
-        <div class="box input_box2">
+      <div class="container">
+        <div class="box">
           <h1>Build your Relay</h1>
           <div class="text_seperator"></div>
           <div class="tab">
